goals destroy and fix create action, calendar validate

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,9 @@ ja:
     sessions:
       signed_in: "ログインしました。"
       signed_out: "ログアウトしました。"
+  activerecord:
+    attributes:
+      goal:
+        title: タイトル
+        start_date: 開始日
+        target_date: 目的日
